<resources>
    <string name="app_name">Pizza Maker</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="size">Size</string>
    <string name="small">Small</string>
    <string name="meduim">Meduim</string>
    <string name="large">Large</string>
    <string name="allToppings">Toppings</string>
    <string name="add_topping">Add Topping</string>
    <string name="order">Order</string>
    <string name="go_order">GO ORDER!!!</string>
    <string name="thank_you">Thank You!!!</string>
    <string name="thank_you_msg">Your order will be coming shortly...</string>
    <string name="pizza_pic_url">http://www.seriouseats.com/recipes/assets_c/2017/02/20170216-detroit-style-pizza-43-thumb-1500xauto-436479.jpg</string>

    <string-array name="topping_names">
        <item name="cheese">Cheese</item>
        <item name="pepperoni">Pepperoni</item>
        <item name="sausage">Sausage</item>
        <item name="ham">Ham</item>
        <item name="pineapple">Pineapple</item>
        <item name="bacon">Bacon</item>
        <item name="mushrooms">Mushrooms</item>
        <item name="olives">Olives</item>
        <item name="peppers">Peppers</item>
        <item name="spinach">Spinach</item>
        <item name="chicken">Chicken</item>
        <item name="onions">Onions</item>
    </string-array>
    <string-array name="toppings_urls">
        <item>https://openclipart.org/image/100px/svg_to_png/216864/SmalCheese.svg</item>
        <item>https://openclipart.org/image/100px/svg_to_png/189439/Pizza-Pepperoni.png</item>
        <item>https://openclipart.org/image/100px/svg_to_png/215078/sausage-coloured.png</item>
        <item>https://openclipart.org/image/100px/svg_to_png/8649/ham-2.png</item>
        <item>https://openclipart.org/image/100px/svg_to_png/227156/pineapple.png</item>
        <item>https://openclipart.org/image/100px/svg_to_png/209517/food-bacon.png</item>
        <item>https://openclipart.org/image/100px/svg_to_png/175398/mushroom.png</item>
        <item>https://openclipart.org/image/100px/svg_to_png/279550/olive.png</item>
        <item>https://openclipart.org/image/100px/svg_to_png/169005/pepper.png</item>
        <item>https://openclipart.org/image/100px/svg_to_png/209682/food-spinach.png</item>
        <item>https://openclipart.org/image/100px/svg_to_png/27980/chicken.png</item>
        <item>https://openclipart.org/image/100px/svg_to_png/277245/half-a-red-onion.png</item>
    </string-array>
</resources>
