<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pizzamaker.thankYou.thankYouActivity"
    android:gravity="center_horizontal">
    <ImageView
        android:id="@+id/image_view_pizza_oven"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pizza_oven"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/text_view_thank_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:textSize="50sp" />
    <TextView
        android:id="@+id/text_view_thank_you_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_msg"
        android:textSize="30dp"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_view_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textSize="25dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="finished"/>
</LinearLayout>
